0.6.0 (currently working on)
- [#415] Change: Send "access denied" HTTP headers if access has been denied
- [#1059] Fix: Error with strrpos in the config check
- [#602] Change: In the SQL file, remove NOT NULL from all text and blob fields
- [#669] Code cleanup
- [#712] Change: Remove the "needs registration" checkbox
- [#1025] Feature: Add a field "size of registration queue" to the BE and FE editing of events records
- [#1056] Fix: Teaser text not included in list view search
- [#923] Change: Calculate the vacancies and registration number on the fly
- [#1040] Fix: <br /> is displayed on the confirmation page after the selected method of payment
- [#1045] Fix: Use require_once instead of require in mod1/index.php
- [#1042] Fix: Another PHP error on the registration page
- [#1039] Fix: Error on register attendances
- [#936] Fix: Empty label tags for the "terms" and "terms_2" checkboxes
- [#1010] Change: Notification mails to organizers now use real labels instead of DB field names.
- [#1015] Fix: Registration page: Radiobuttons for the payment methods should be vertically arranged
- [#963] Change: Only show the total price on the confirmation page if the "seats" element is enabled
- [#666] Change: Recommend TYPO3 4.1.2
- [#902] Change: Registrations should be counted as references to event records and FE user records
- [#940] Change: Unified the German wording for "special price".
- [#416] Change: Allow commas as decimal separator in prices, too (in the FE editing)
- [#953] Change: Define LF as chr(10) and use that instead of chr(10)
- [#941] Fix: The displayed total price is 0 if the "price" field is not in showRegistrationFields
- [#950] Fix: Call time pass by reference warnings, patch by Stefan Galinski
- [#956] Fix: $MCONF is used uninitialized in mod1 and mod2
- [#952] Fix: Set FORMidable max version to 0.7.0
- [#831] Fix: Red warning during registration
- [#935] Change: Add @author, @package and @subpackage tags to all PHP classes