@@ -1,4 +1,5 @@
 0.6.0 (currently working on)
+- [#900] Change: Suggest the onetimeaccount extension
 - [#415] Change: Send "access denied" HTTP headers if access has been denied
 - [#1059] Fix: Error with strrpos in the config check
 - [#602] Change: In the SQL file, remove NOT NULL from all text and blob fields
